Remove red warning icon from public session login page

This is a temporary change until we support managed
sessions properly and can show the UI based on
whether we run public session or managed session.

Bug: 905317
Change-Id: I03c15f2d0bc59ed9a86d4da86aa62590721366eb
Reviewed-on: https://chromium-review.googlesource.com/c/1335584
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Ivan Šandrk <isandrk@chromium.org>
Commit-Queue: Zakhar Voit <voit@google.com>
Cr-Commit-Position: refs/heads/master@{#608088}
Former-commit-id: 7488f36809d7a737ae81934b8bf16985243725e6